--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "react-scroll-to-bottom": "^4.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
